# datrix

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml
claude-config/.claude/: CLAUDE.md  MEMORY.md  README.md  settings.json  settings.local.json
claude-config/.claude/agent-templates/: agent-progress-polling-protocol.md  dependencies-format.md  task-implementation-agent.md
claude-config/.claude/docs/: delegation-metrics-spec.md  (+3 more)
docs/: README.md  doc_index.md  why-datrix.md
docs/architecture/: architecture-cheat-sheet.md  architecture-overview.md  codegen-migration-strategy.md  design-principles-cheat-sheet.md  design-principles.md  generated-output-stability.md  rdbms-migration-decisions.md
docs/getting-started/: first-project.md
docs/guide/: README.md  complete-examples.md  configuration-guide.md  database-drift-reconciliation.md  event-contracts.md  patterns-and-best-practices.md  seed-data-guidelines.md  spec-testing.md  writing-datrix-applications.md
docs/reference/: config-dsl-reference.md  language-reference.md
examples/: README.md
examples/01-foundation/: book-service-base.dtrx  common.dtrx  system.dtrx
examples/01-tutorial/: README.md
examples/foundation/: common.dtrx
scripts/: README.md  quick-reference.md
scripts/common/: CleanupUtils.psm1  DatrixPaths.psm1  DatrixScriptCommon.psm1  README.md  venv.ps1
scripts/config/: README.md  docs-conformance-exceptions.json  function-level-import-baseline.toml  generated-file-ratchet.json  import-boundary-allowlist.toml  parity-known-nongenerating.json  provider-conditional-baseline.toml  target-literal-baseline.toml  test-projects.json
scripts/dev/: README.md  ast-grep.ps1  audit.ps1  byte-identity-generate.ps1  check-debug-artifacts.ps1  check-docs.ps1  check-import-boundaries.ps1  check-import-boundaries.py  check-line-endings.py  check-python-bytecode.ps1  cleanup-temps.ps1  cleanup_temps.ps1  compare-generated.ps1  compile-any-path.ps1  compile.ps1  config-linter.ps1  conformance-gate.ps1  datrix-count.ps1  datrix-format.ps1  datrix-linter.ps1  delete-generated.ps1  empty-folders.ps1  evaluate-generated-scan.ps1  evaluate-service-scan.ps1  evaluate-services.ps1  extra-parens.ps1  file-count.ps1  find-constants.ps1  gendsl-census.ps1  generate-doc-fragments.ps1  generate-test-rules.ps1  generate.ps1  libcst.ps1  logic-map-report.ps1  logic-map.ps1  migrate_observability_configs.py  migrate_subscribe_out_of_pubsub.py  parity-checker.ps1  project-structure.ps1  projects.ps1  (+8 more)
scripts/git/: README.md  auto-commit-and-push.ps1  commit-and-push.ps1  l-commit-and-push.ps1  l_commit_and_push.ps1  pull.ps1  quick-reference.md  status.ps1
scripts/metrics/: README.md  bandit.ps1  cleanup-ruff.ps1  cleanup_ruff.ps1  code-analyzer.ps1  complexity.ps1  coverage.ps1  dead-code-report.ps1  dead_code_report.ps1  dependency.ps1  duplicate.ps1  error-messages.ps1  large-files.ps1  loc.ps1  quick-reference.md  ruff.ps1  test-gen.ps1  vulture.ps1
scripts/review/: README.md  apply-reviews-prep.ps1  config.toml  quick-reference.md
scripts/tasks/: README.md  cleanup.ps1  common.ps1  complete.ps1  completed.ps1  latest-phase.ps1  phase-status.ps1  plan-waves.ps1  quick-reference.md  todo.ps1  validate-dependencies.ps1
scripts/test/: README.md  check-docs-conformance.ps1  check-docs-conformance.py  check-generated-file-ratchet.ps1  check-generated-file-ratchet.py  check-observability-native-only.ps1  check-observability-native-only.py  classify-run-delta.ps1  cleanup.ps1  collect-failure-data.ps1  compare-tests.ps1  dual-target.ps1  extract-warnings.ps1  gate-verdict.ps1  gendsl-corpus-resolution-gate.ps1  ingress-migration-conformance-gate.ps1  mypy.ps1  quick-reference.md  reference-example-parity-gate.ps1  regen-parity-baselines.ps1  review-library-gate.ps1  review-library-gate.py  run-complete.ps1  run-tests.ps1  shared-library-gate.ps1  shared-library-gate.py  shared39-supported-parity-gate.ps1  status-deploy-tests.ps1  status-run-tests.ps1  status-tests.ps1  status-unit-tests.ps1  supported-domain-parity-gate.ps1  test-single.ps1  test-specific-selection-gate.ps1  test-specific-selection-gate.py  test-tooling-parsing-gate.ps1  test-tooling-parsing-gate.py  test.ps1  type-mapping-completeness.ps1  typescript-whole-system-gate.ps1
scripts/tests/: conftest.py  test_check_docs.py  test_generate_doc_fragments.py  test_generate_log_context.py
scripts/visualize/: all-reports.ps1  openapi-gen.ps1  quick-reference.md  schema-diff.ps1  schema-snapshot.ps1  status-docs.ps1  visualize.ps1
tests/: conftest.py  test_public_repo_cleanup_guard.py
tests/integration/: test_byte_identical_regeneration.py
(+1953 files in other folders)
