[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datrix"
version = "0.1.0"
description = "Datrix showcase repo — docs, examples, and scripts only (not an installable toolchain package; hosts no test suite)"
requires-python = ">=3.11"
dependencies = []
